--- a/.gitignore
+++ b/.gitignore
@@ -38,6 +38,7 @@ captures/
 
 # IntelliJ
 *.iml
+/.idea/
 .idea/misc.xml
 .idea/workspace.xml
 .idea/tasks.xml
@@ -52,7 +53,6 @@ captures/
 .idea/modules.xml
 # Comment next line if keeping position of elements in Navigation Editor is relevant for you
 .idea/navEditor.xml
-.idea/deploymentTargetDropDown.xml
 
 # Keystore files
 # Uncomment the following lines if you do not want to check your keystore files in.
